css/main.css
/* ... */
.icon-button {
    padding: 0;
    border: 0;
    background-color: transparent;
}

.icon-button[aria-label="thumbs up"], .ruling-block__votation--container > .positive {
    background-color: rgba(var(--color-green-positive), .8);
}

.icon-button[aria-label="thumbs up"]:hover, .ruling-block > .positive {
    background-color: rgba(var(--color-green-positive), 1);
}

.icon-button[aria-label="thumbs down"], .ruling-block__votation--container > .negative {
    background-color: rgba(var(--color-yellow-negative), .8);
}

.icon-button[aria-label="thumbs down"]:hover, .ruling-block > .negative {
    background-color: rgba(var(--color-yellow-negative), 1);
}

.icon-button > img {
    width: 100%;
    height: 100%;
}

.nav__logo {
    margin: 2.5rem 0 0;
    color: var(--color-white);
    font-size: 2rem;
    font-weight: 400;
    line-height: 2.5rem;
}

.nav__hamburger {
    position: relative;
    top: 2rem;
    right: 1rem;
    width: 25px;
    height: 20px;
}

.nav__links {
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    display: flex;
    width: 100vw;
    height: calc(100vh - 4rem);
    flex-direction: column;
    padding: 4rem 0 2rem;
    background-color: var(--color-darker-background);
    transform: translateX(100vw);
}

.nav__links li {
    width: 100%;
    margin: 3rem 0;
    font-size: 2rem;
    text-align: center;
}

.nav__links a {
    color: var(--color-white);
    text-decoration: none;
}

.nav__hamburger:focus + .nav__links,
.nav__links:focus-within {
    transform: translateX(0);
}

.nav__links li:last-child {
    order: -1;
}

.nav__search {
    width: 24px;
    height: 24px;
    margin-left: .5rem;
}

.nav__search-input {
    width: 25vw;
    border: 0;
    border-bottom: 2px solid var(--color-white);
    background-color: transparent;
    border-radius: 0;
    color: var(--color-white);
    font-family: 'Lato', sans-serif;
    font-size: 1.5rem;
    transition: width .2s ease-in;
}

.nav__search-input:focus {
    width: 60vw;
    outline: 0 none;
}

.hero {
    position: relative; 
    overflow: hidden;
    height: 80vw;
    min-height: 35rem;
    max-height: 38rem;
    margin-bottom: 2rem;
}

.hero__background {
    position: absolute;
    left: -35vw;
    width: 160vw;
    height: 100%;
    object-fit: cover;
}

.hero__featured-card {
    position: relative;
    top: 5.5rem;
    left: 1rem;
    overflow: hidden;
    width: 55vw;
    max-height: 25rem;
}

.hero__closing-gauge {
    position: absolute;
    bottom: 0;
    display: flex;
    width: 100%;
    height: 3rem;
    background-color: var(--color-light-background);
}

.featured-card__glass-background {
    position: absolute;
    top: -20%;
    left: -20%;
    width: 140%;
    height: 140%;
    background:
        center no-repeat linear-gradient(
            var(--color-dark-background),
            var(--color-dark-background)
        ),
        -25vw 0/160vw no-repeat url('../assets/img/pope-francis.png');
    filter: blur(1rem);
}

.featured-card__content {
    position: relative;
    padding: 1rem;
    color: var(--color-white);
}

.featured-card__hairline {
    margin: 0;
    font-weight: 300;
    white-space: nowrap;
}

.featured-card__title {
    margin: 0;
    font-size: 3rem;
    font-weight: 400;
    line-height: 1;
}

.featured-card__desc {
    display: -webkit-box;
    overflow: hidden;
    max-height: 10.5rem;
    margin: 1rem 0;
    -webkit-box-orient: vertical;
    font-size: 1.25rem;
    font-weight: 300;
    -webkit-line-clamp: 6;
    text-overflow: ellipsis;
}

.featured-card__cta {
    font-weight: 700;
}

.featured-card__buttons {
    display: flex;
    justify-content: space-between;
    margin: 0 -1rem -1rem;
}

.featured-card__buttons > .icon-button {
    width: 50%;
    height: 2.75rem;
}

.featured-card__buttons > .icon-button > img {
    max-width: 1.25rem;
}

.closing-gauge__left {
    position: relative;
    display: flex;
    width: 30%;
    align-items: center;
    justify-content: flex-end;
    padding: 0 .25rem 0 0;
    background-color: var(--color-dark-background);
    color: var(--color-white);
    font-weight: 300;
    text-transform: uppercase;
}

.closing-gauge__left:after {
    position: absolute;
    right: -.5rem;
    display: block;
    width: 0;
    height: 0;
    border-top: 0.25rem solid transparent;
    border-bottom: 0.25rem solid transparent;
    border-left: 0.5rem solid var(--color-dark-background);
    content: ' ';
}

.closing-gauge__right {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    padding: 0 0 0 .75rem;
}

.closing-gauge__number {
    color: var(--color-dark-gray);
    font-size: 1.5rem;
    font-weight: 400;
}

.closing-gauge__desc {
    color: var(--color-dark-gray);
    font-size: 1.5rem;
    font-weight: 300;
}

.banner {
    position: relative;
    display: flex;
    overflow: hidden;
    align-items: center;
    justify-content: space-between;
    padding: 1rem;
    margin: 1rem;
    background-color: var(--color-light-gray);
}

.banner__background {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    object-fit: cover;
    opacity: .2;
    pointer-events: none;
}

.banner-top .banner__left {
    flex-basis: 40%;
    padding-right: 1rem;
}

.banner-top .banner__left > .banner__hairline {
    color: var(--color-dark-gray);
    font-size: 1.25rem;
    font-weight: 300;
    letter-spacing: -.07rem;
}

.banner-top .banner__left > .banner__title {
    display: block;
    color: var(--color-dark-gray);
    font-size: 2rem;
    font-weight: 700;
    letter-spacing: -.05rem;
}

.banner-top .banner__right {
    flex-basis: 60%;
}

.banner-top .banner__text {
    margin: 0;
    color: var(--color-dark-gray);
    font-size: 1.25rem;
    font-weight: 300;
    letter-spacing: -.05rem;
}

/*Widget Styles for Mobile*/
.rulings-container {
    display: flex;
    width: calc(100vw - 2rem);
    overflow: scroll;
}
/* ... */

